--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -44,7 +44,7 @@ html {
 }
 .page {
   height: 100%;
-  font-family: "Georgia", 'ArialMT', sans-serif;
+  font-family: "Georgia", 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
 }
@@ -180,7 +180,7 @@ img {
 .hero__image {
   margin-left: 60px;
 }
-/* * ABOUT */ */
+/* * ABOUT */ 
 .about__image {
   display: inline-block;
   margin-top: 80px;
@@ -211,7 +211,68 @@ img {
   margin-bottom: 25px;
   
 }
-
-
+/* friends */
+.friends {
+  padding-top: 60px;
+  background: #F6F6F6;
+}
+.friends__container {
+  padding-bottom: 100px;
+}
+.friends__wrap-title {
+  text-align: center;
+}
+.friends__title {
+  max-width: 35%;
+  display: inline-block;
+  margin-bottom: 60px;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 45px;
+  letter-spacing: 0.06em;
+  color: #545454;
+}
+.friends__list {
+  display: flex;
+  justify-content: space-between;
+}
+.friends__item {
+  margin-bottom: 60px;
+  border-radius: 9px;
+  background-color: #FAFAFA;;
+}
+.friends__card-name {
+  display: block;
+  margin-top: 30px;
+  margin-bottom: 45px;
+  text-align: center;
+}
+.friends__card-btn {
+  display: block;
+  margin-bottom: 45px;
+  margin-left: 41px;
+  padding: 15px 45px;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: 0.06em;
+  text-align: center;
+  border: 2px solid #F1CDB3;
+  border-radius: 100px;
+}
+.friends__card-btn__link {
+  color: #292929;
+}
+.friends-wrap__btn-rest {
+  text-align: center;
+}
+.friends__btn-rest {
+  padding: 15px 45px;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: 0.06em;
+  background: #F1CDB3;
+  border-radius: 100px;
+  color: #292929;
+}
 
 
