--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -20,16 +20,121 @@
   font-style: italic;
 }
 @font-face {
-  font-family: 'ArialMT';
+  font-family: 'Arial';
   src: url('../../assets/fonts/ArialMT.woff2') format('woff2');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
-  font-family: 'ArialMT';
+  font-family: 'Arial';
   src: url('../../assets/fonts/ArialItalicMT.woff2') format('woff2');
   font-weight: 400;
   font-display: swap;
   font-style: italic;
+}
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+.page {
+  height: 100%;
+  font-family: "Georgia", 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+.page__body {
+  margin: 0;
+  min-width: 320px;
+  min-height: 100%;
+  font-size: 16px;
+}
+h1,h2,h3,h4,h5,h6,p {
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+}
+img {
+  height: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+.btn-reset {
+  border: none;
+  padding: 0;
+  background: transparent;
+  cursor: pointer;
+}
+.list-reset {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.container {
+  margin: 0 auto;
+  padding: 0 40px;
+  max-width: 1280px;
+}
+
+/* header */
+
+.header {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+.header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  height: 60px;
+}
+.logo__title {
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 35px;
+  letter-spacing: 0.06em;
+  
+}
+.logo__link {
+  color: #545454;
+}
+.logo__subtitle {
+  margin-top: 10px;
+  font-family: 'Arial';
+  font-size: 13px;
+  line-height: 15px;
+  letter-spacing: 0.1em;
+  color: #292929;
+}
+.nav__list {
+  display: flex;
+}
+.nav__item:not(:last-child) {
+  margin-right: 35px;
+}
+.nav__link {
+  padding-bottom: 5px;
+  font-family: 'Arial';
+  font-size: 15px;
+  line-height: 24px;
+  color: #545454;
+  transition: 0.1s ease-in-out;
+}
+.nav__link:hover {
+  color: #292929
+}
+.nav__link:active {
+  border-bottom: 3px solid #F1CDB3;
+  color: #545454;
 }
