--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -86,9 +86,9 @@ img {
 /* header */
 
 .header {
-  position: absolute;
-  left: 0;
-  top: 0;
+  /* position: absolute; */
+  /* left: 0; */
+  /* top: 0; */
   width: 100%;
 }
 .header__container {
@@ -137,4 +137,73 @@ img {
 .nav__link:active {
   border-bottom: 3px solid #F1CDB3;
   color: #545454;
+}
+/* friends */
+
+.friends {
+  background: #F6F6F6;
+}
+.friends__container {
+  padding-top: 60px;
+  padding-bottom: 100px;
+}
+.friends__wrap-title {
+  text-align: center;
+}
+.friends__title {
+  max-width: 35%;
+  display: inline-block;
+  margin-bottom: 60px;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 45px;
+  letter-spacing: 0.06em;
+  color: #545454;
+}
+.friends__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.friends__item {
+  margin-bottom: 60px;
+  border-radius: 9px;
+  background-color: #FAFAFA;
+  transition: 0.2s ease-in-out;
+}
+.friends__item:hover {
+  background-color: #FFFFFF;
+  
+}
+
+
+.friends__card-name {
+  display: block;
+  margin-top: 30px;
+  margin-bottom: 45px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  letter-spacing: 0.06em;
+  color: #545454;
+}
+.friends__card-btn {
+  display: block;
+  margin-bottom: 45px;
+  margin-left: 41px;
+  padding: 15px 45px;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: 0.06em;
+  text-align: center;
+  border: 2px solid #F1CDB3;
+  border-radius: 100px;
+  transition: 0.2s ease-in-out;
+}
+.friends__card-btn:hover {
+  background-color: #F1CDB3;
+}
+.friends__card-btn__link {
+  color: #292929;
 }
