--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -102,12 +102,12 @@ img {
   font-size: 32px;
   line-height: 35px;
   letter-spacing: 0.06em;
-  
 }
 .logo__link {
   color: #F1CDB3;
 }
 .logo__subtitle {
+  display: block;
   margin-top: 10px;
   font-family: 'Arial';
   font-size: 13px;
@@ -128,6 +128,9 @@ img {
   line-height: 24px;
   color: #CDCDCD;
   transition: 0.2s ease-in-out;
+}
+.nav__link-active {
+  border-bottom: 3px solid #F1CDB3;
 }
 .nav__link:hover {
   color: #FAFAFA;
@@ -219,12 +222,49 @@ img {
   
 }
 /* friends */
+
 .friends {
   background: #F6F6F6;
 }
 .friends__container {
+  position: relative;
   padding-top: 60px;
   padding-bottom: 100px;
+}
+.friends__pagination {
+  position: absolute;
+  width: 52px;
+  height: 52px;
+  border: 2px solid #F1CDB3;
+  border-radius: 100px;
+  transform: rotate(-180deg);
+  transition: 0.2s ease-in-out;
+}
+.friends__pagination:hover {
+  background: #FDDCC4;
+}
+.friends__pagination:nth-child(2) {
+  bottom: 403px;
+}
+.friends__pagination:first-child {
+  right: 0;
+  bottom: 403px;
+}
+.first {
+  display: inline-block;
+  width: 14px;
+  height: 8px;
+  background-image: url('../../assets/icons/arrow-left.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.second {
+  display: inline-block;
+  width: 14px;
+  height: 8px;
+  background-image: url('../../assets/icons/arrow-right.svg'); 
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .friends__wrap-title {
   text-align: center;
@@ -241,7 +281,7 @@ img {
 }
 .friends__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .friends__item {
   margin-bottom: 60px;
@@ -290,13 +330,15 @@ img {
 }
 .friends__btn-rest {
   padding: 15px 45px;
+  background: #F1CDB3;
+  border-radius: 100px;
+  transition: 0.2s ease-in-out;
+}
+.friends__link-rest {
   font-size: 17px;
   line-height: 22px;
   letter-spacing: 0.06em;
-  background: #F1CDB3;
-  border-radius: 100px;
   color: #292929;
-  transition: 0.2s ease-in-out;
 }
 .friends__btn-rest:hover {
   background: #FDDCC4;
@@ -392,7 +434,6 @@ img {
   color: #545454;
 }
 .donation__wrap-bank {
-  display: flex;
   max-width: 350px;
   padding: 10px 15px;
   background: #F1CDB3;
@@ -403,6 +444,10 @@ img {
   background-image: url('../../assets/icons/credit-card.svg');
   width: 30px;
   height: 23px;
+}
+.donation__link {
+  display: flex;
+  justify-content: center;
 }
 .donation__bank {
   margin-left: 15px;
