--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -86,7 +86,8 @@ img {
 /* header */
 
 .header {
-  /* position: absolute; */
+  position: fixed;
+  background: #FFFFFF;
   /* left: 0; */
   /* top: 0; */
   width: 100%;
@@ -148,7 +149,7 @@ img {
   background: #F6F6F6;
 }
 .friends__container {
-  padding-top: 80px;
+  padding-top: 180px;
   padding-bottom: 100px;
 }
 .friends__wrap-title {
@@ -174,6 +175,7 @@ img {
   border-radius: 9px;
   background-color: #FAFAFA;
   transition: 0.2s ease-in-out;
+  cursor: pointer;
 }
 .friends__item:hover {
   background-color: #FFFFFF;
@@ -205,12 +207,88 @@ img {
   border-radius: 100px;
   transition: 0.2s ease-in-out;
 }
-.friends__card-btn:hover {
+.friends__item:hover .friends__card-btn {
   background-color: #F1CDB3;
 }
 .friends__card-btn__link {
   color: #292929;
 }
+.friends__wrap-pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 45px;
+  gap: 20px;
+}
+.friends__pagination {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #F1CDB3;
+  border-radius: 100px;
+  transition: 0.2s ease-in-out;
+}
+.friends__btn-num {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #F1CDB3;
+  font-size: 20px;
+  line-height: 23px;
+  letter-spacing: 0.06em;
+  border-radius: 100px;
+  transition: 0.2s ease-in-out;
+}
+.friends__btn-num:hover {
+  background: #F1CDB3;
+}
+.friends__btn-num:active {
+  background: #F1CDB3;
+}
+
+.friends__btns__left {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  width: 27px;
+  height: 23px;
+  background-image: url('../../assets/icons/btn-lefts.svg'); 
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.friends__buttons__left {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  width: 13px;
+  height: 23px;
+  background-image: url('../../assets/icons/btnleft.svg'); 
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.friends__buttons__right {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  width: 13px;
+  height: 23px;
+  background-image: url('../../assets/icons/btnright.svg'); 
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.friends__btns__right {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  width: 27px;
+  height: 23px;
+  background-image: url('../../assets/icons/btn-rights.svg'); 
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.btn-inactive {
+  border: 2px solid #CDCDCD;
+}
+
+
+
 /* footer */ 
 .footer {
   background-image: url('../../assets/images/footer-gradient-background.png');
@@ -220,7 +298,6 @@ img {
 }
 .footer__container {
   position: relative;
-  /* padding-top: 56px; */
 }
 .footer__contacts {
   display: inline-block;
@@ -270,6 +347,8 @@ img {
   background-repeat: no-repeat;
 }
 .footer__contacts__link {
+  display: flex;
+  align-items: center;
   font-size: 20px;
   line-height: 23px;
   letter-spacing: 0.06em;
@@ -279,6 +358,10 @@ img {
   max-width: 270px;
 }
 .footer__location__locate {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-width: 320px;
   font-size: 20px;
   line-height: 23px;
   letter-spacing: 0.06em;
@@ -301,10 +384,8 @@ img {
   height: 32px;
   background-image: url('../../assets/icons/icon-marker.svg');
   background-position: center;
+  background-size: contain;
   background-repeat: no-repeat;
-}
-.footer__location__locate {
-  max-width: 260px;
 }
 .footer__puppy-img {
   position: absolute;
