--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -88,6 +88,7 @@ img {
 .header {
   position: fixed;
   background: #FFFFFF;
+  z-index: 5;
   /* left: 0; */
   /* top: 0; */
   width: 100%;
@@ -113,6 +114,7 @@ img {
 .logo__subtitle {
   display: block;
   margin-top: 10px;
+  margin-left: 4px;
   font-family: 'Arial';
   font-size: 13px;
   line-height: 15px;
@@ -121,6 +123,8 @@ img {
 }
 .nav__list {
   display: flex;
+  transform: translate(-2px, -2px)
+
 }
 .nav__item:not(:last-child) {
   margin-right: 35px;
@@ -149,7 +153,7 @@ img {
   background: #F6F6F6;
 }
 .friends__container {
-  padding-top: 180px;
+  padding-top: 200px;
   padding-bottom: 100px;
 }
 .friends__wrap-title {
@@ -171,22 +175,29 @@ img {
   justify-content: space-between;
 }
 .friends__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 30px;
   margin-bottom: 30px;
+  height: 435px;
   border-radius: 9px;
   background-color: #FAFAFA;
   transition: 0.2s ease-in-out;
-  cursor: pointer;
 }
 .friends__item:hover {
   background-color: #FFFFFF;
   
 }
-
+.friends__card-img {
+  max-height: 270px;
+}
+.friends__card-img img {
+  height: auto;
+}
 
 .friends__card-name {
   display: block;
-  margin-top: 30px;
-  margin-bottom: 45px;
   text-align: center;
   font-weight: 400;
   font-size: 20px;
@@ -195,10 +206,9 @@ img {
   color: #545454;
 }
 .friends__card-btn {
-  display: block;
-  margin-bottom: 45px;
   margin-left: 41px;
-  padding: 15px 45px;
+  padding: 12px 44px;
+  max-width: fit-content;
   font-size: 17px;
   line-height: 22px;
   letter-spacing: 0.06em;
@@ -216,7 +226,7 @@ img {
 .friends__wrap-pagination {
   display: flex;
   justify-content: center;
-  margin-top: 45px;
+  margin-top: 30px;
   gap: 20px;
 }
 .friends__pagination {
@@ -240,6 +250,9 @@ img {
   background: #F1CDB3;
 }
 .friends__btn-num:active {
+  background: #F1CDB3;
+}
+.btn-num-active {
   background: #F1CDB3;
 }
 
@@ -301,7 +314,7 @@ img {
 }
 .footer__contacts {
   display: inline-block;
-  margin-right: 161px;
+  margin-right: 151px;
 }
 .footer__location {
   display: inline-block;
@@ -326,7 +339,7 @@ img {
 .footer__contacts__wrap-phone {
   display: flex;
   align-items: center;
-  margin-bottom: 64px;
+  margin-bottom: 60px;
 }
 .foooter__contacts__icon-mail {
   display: inline-block;
@@ -372,6 +385,8 @@ img {
   align-items: center;
   margin-top: 28px;
   margin-bottom: 37px;
+  transform: translate(-2px, 4px);
+
 }
 .footer__location__wrap-second {
   display: flex;
@@ -389,7 +404,7 @@ img {
 }
 .footer__puppy-img {
   position: absolute;
-  top: 44px;
+  top: 40px;
   right: 40px;
   height: auto;
   object-fit: contain;
