--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -236,6 +236,9 @@ img {
   border-radius: 100px;
   transition: 0.2s ease-in-out;
 }
+.friends__pagination__next:hover {
+  background: #FDDCC4;
+}
 .friends__btn-num {
   width: 52px;
   height: 52px;
