--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -831,7 +831,7 @@ img {
     /* opacity: 0.2; */
     /* visibility: hidden; */
     transform: translateX(100%);
-    transition: transform 0.6s ease-in-out;
+    transition: transform 0.3s ease-in-out;
     /* -webkit-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
     -o-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; */
@@ -851,7 +851,7 @@ img {
   }
   .nav__link {
     font-size: 32px;
-    line-height: 51%;
+    line-height: 51px;
   }
 
 
@@ -892,8 +892,6 @@ img {
   }
   .friends__list {
     padding-bottom: 114px;
-  }
-  .friends__pagination {
   }
   .friends__pagination:nth-child(2) {
     left: 80px;
